--- a/templates/drinks_menu.html
+++ b/templates/drinks_menu.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Μενού Ποτών | Drinks Menu</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
 </head>
 <body>
