--- a/templates/menu.html
+++ b/templates/menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Valantina's Menu Since 1987</title>
-    <link hrel="https://fonts.googleapis.com/css2?family=Playfair+display=swap" rel="stylesheet">
+    <link hrel="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}">
 </head>
 <body>
