--- a/templates/menu.html
+++ b/templates/menu.html
@@ -6,130 +6,128 @@
     <link hrel="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    <h1>Valantina’s Restaurant</h1>
-    <h2>Menu</h2>
-    
-	<!-- Breads-->
-    <div class="category">
-       <h2>Breads</h2>
-        <div class="item"><span class="item-name">Perikafti</span><span class="item-price">6.00€</span><br><span class=>Country homemade bread with olive oil, oregano and sea salt</span></div>
-        <div class="item"><span class="item-name">Garlic bread</span><span class="item-price">3.40€</span></div>
-        <div class="item"><span class="item-name">Bread</span><span class="item-price">3.40€</span></div>
-    </div> 
+    <header>
+      <h1 class="restaurant-title">Valantina's Restaurant</h1>
+      <p class="subtitle">Since 1987 - Lardos, Greece</p>
+    </header>
 	
-	<!-- Cold Appetizers -->
-    <div class="category">
-	   <h2>Cold Appetizers</h2>
-        <div class="item"><span class="item-name">Homemade Tzatziki</span><span class="item-price">5.50€</span></div>
-        <div class="item"><span class="item-name">Smoky Aubergine Dip</span><span class="item-price">5.50€</span></div>
-        <div class="item"><span class="item-name">Hummus (Chickpea Purée)</span><span class="item-price">5.50€</span></div>
-        <div class="item"><span class="item-name">Valantina's Meze</span><span class="item-price">8.90€</span><br><span class=>Assortment with tzatziki, aubergine dip, chickpea purée and pita bread</span></div>
-    </div>
+    <section class="menu-section">
+        <h2 class="section-title">Breads</h2>
+          <div class="item"><span class="item-name">Perikafti</span><span class="item-price">6.00€</span><br><span class=>Country homemade bread with olive oil, oregano and sea salt</span></div>
+          <div class="item"><span class="item-name">Garlic bread</span><span class="item-price">3.40€</span></div>
+          <div class="item"><span class="item-name">Hot Roll Breads</span><span class="item-price">3.40€</span></div>
+        </div> 
+    </section>
+	
+    <section class="menu-section">
+         <h2 class="section-title">Cold Appetizers</h2>
+           <div class="item"><span class="item-name">Homemade Tzatziki</span><span class="item-price">5.50€</span></div>
+           <div class="item"><span class="item-name">Smoky Aubergine Dip</span><span class="item-price">5.50€</span></div>
+           <div class="item"><span class="item-name">Hummus (Chickpea Purée)</span><span class="item-price">5.50€</span></div>
+           <div class="item"><span class="item-name">Valantina's Meze</span><span class="item-price">8.90€</span><br><span class=>Assortment with tzatziki, aubergine dip, chickpea purée and pita bread</span></div>
+         </div>
+    </section>
+	
+    <section clss="menu-section">
+	  <h2 class="section-title">Warm Appetizers</h2>
+           <div class="item"><span class="item-name">Valantina’s Potatoes</span><span class="item-price">9.50€</span></div>
+           <div class="item"><span class="item-name">Grilled Vegetables with hallumi cheese and yogurt sauce</span><span class="item-price">9.50€</span></div>
+           <div class="item"><span class="item-name">Zucchini Chips with tzatziki</span><span class="item-price">8.90€</span></div>
+           <div class="item"><span class="item-name">Cheese Balls with lemon marmalade</span><span class="item-price">9.50€</span></div>
+           <div class="item"><span class="item-name">Baked Feta Cheese</span><span class="item-price">9.50€</span><br><span class=>Wrapped in filo pastry, black sesame seeds and honey</span></div>
+           <div class="item"><span class="item-name">Halloumi</span><span class="item-price">10.90€</span><br><span class=>Marinated with sun-dried tomato pesto, mushrooms and truffle sauce</span></div>
+           <div class="item"><span class="item-name">Chicken Parcel</span><span class="item-price">9.90€</span></div>
+           <div class="item"><span class="item-name">Chicken Wings in BBQ sauce</span><span class="item-price">9.90€</span></div>
+           <div class="item"><span class="item-name">Mushroom on pita bread</span><span class="item-price">8.90€</span></div>
+           <div class="item"><span class="item-name">Dolmades</span><span class="item-price">8.90€</span></div>
+           <div class="item"><span class="item-name">Keftedes (Mint Meatballs)</span><span class="item-price">13.90€</span></div>
+           <div class="item"><span class="item-name">Cod Croquettes</span><span class="item-price">15.50€</span></div>
+           <div class="item"><span class="item-name">Shrimps Saganaki</span><span class="item-price">13.90€</span></div>
+           <div class="item"><span class="item-name">Mussels</span><span class="item-price">15.50€</span></div>
+           <div class="item"><span class="item-name">Calamari</span><span class="item-price">8.90€</span></div>
+           <div class="item"><span class="item-name">Octopus with Rhodes Fava</span><span class="item-price">11.90€</span></div>
+           <div class="item"><span class="item-name">Stuffed Plums</span><span class="item-price">9.50€</span></div>
+         </div>
+    </section>
+	
+    <section class="menu-section">
+	 <h2 class="section-title">Salads</h2>
+           <div class="item"><span class="item-name">Valantina’s Burrata</span><span class="item-price">12.50€</span></div>
+           <div class="item"><span class="item-name">Mourlis</span><span class="item-price">12.40€</span></div>
+           <div class="item"><span class="item-name">Traditional Greek Salad</span><span class="item-price">9.90€</span></div>
+           <div class="item"><span class="item-name">Ceasar's</span><span class="item-price">12.40€</span></div>
+         </div>
+    </section>
 
-    <!-- Warm Appetizers -->
-    <div class="category">
-       <h2>Warm Appetizers</h2>
-        <div class="item"><span class="item-name">Valantina’s Potatoes</span><span class="item-price">9.50€</span></div>
-        <div class="item"><span class="item-name">Grilled Vegetables with hallumi cheese and yogurt sauce</span><span class="item-price">9.50€</span></div>
-        <div class="item"><span class="item-name">Zucchini Chips with tzatziki</span><span class="item-price">8.90€</span></div>
-        <div class="item"><span class="item-name">Cheese Balls with lemon marmalade</span><span class="item-price">9.50€</span></div>
-        <div class="item"><span class="item-name">Baked Feta Cheese</span><span class="item-price">9.50€</span><br><span class=>Wrapped in filo pastry, black sesame seeds and honey</span></div>
-        <div class="item"><span class="item-name">Halloumi</span><span class="item-price">10.90€</span><br><span class=>Marinated with sun-dried tomato pesto, mushrooms and truffle sauce</span></div>
-        <div class="item"><span class="item-name">Chicken Parcel</span><span class="item-price">9.90€</span></div>
-        <div class="item"><span class="item-name">Chicken Wings in BBQ sauce</span><span class="item-price">9.90€</span></div>
-        <div class="item"><span class="item-name">Mushroom on pita bread</span><span class="item-price">8.90€</span></div>
-        <div class="item"><span class="item-name">Dolmades</span><span class="item-price">8.90€</span></div>
-        <div class="item"><span class="item-name">Keftedes (Mint Meatballs)</span><span class="item-price">13.90€</span></div>
-        <div class="item"><span class="item-name">Cod Croquettes</span><span class="item-price">15.50€</span></div>
-        <div class="item"><span class="item-name">Shrimps Saganaki</span><span class="item-price">13.90€</span></div>
-        <div class="item"><span class="item-name">Mussels</span><span class="item-price">15.50€</span></div>
-        <div class="item"><span class="item-name">Calamari</span><span class="item-price">8.90€</span></div>
-        <div class="item"><span class="item-name">Octopus with Rhodes Fava</span><span class="item-price">11.90€</span></div>
-        <div class="item"><span class="item-name">Stuffed Plums</span><span class="item-price">9.50€</span></div>
-    </div>
-
-    <!-- Salads -->
-    <div class="category">
-       <h2>Salads</h2>
-        <div class="item"><span class="item-name">Valantina’s Burrata</span><span class="item-price">12.50€</span></div>
-        <div class="item"><span class="item-name">Mourlis</span><span class="item-price">12.40€</span></div>
-        <div class="item"><span class="item-name">Traditional Greek Salad</span><span class="item-price">9.90€</span></div>
-        <div class="item"><span class="item-name">Ceasar's</span><span class="item-price">12.40€</span></div>
-    </div>
-
-    <!-- Main Dishes -->
-    <div class="category">
-       <h2>Main Dishes</h2>
-	   
+    <section class="menu-section">
+	 <h2 class="section-tilte">Main Dishes</h2>
 	   <h2>Chicken</h2>
-        <div class="item"><span class="item-name">Chicken Souvlaki</span><span class="item-price">17.90€</span></div>
-        <div class="item"><span class="item-name">Alfredo’s Chicken</span><span class="item-price">17.90€</span></div>
-        <div class="item"><span class="item-name">Sautéed Chicken</span><span class="item-price">16.90€</span></div>
+              <div class="item"><span class="item-name">Chicken Souvlaki</span><span class="item-price">17.90€</span></div>
+              <div class="item"><span class="item-name">Alfredo’s Chicken</span><span class="item-price">17.90€</span></div>
+              <div class="item"><span class="item-name">Sautéed Chicken</span><span class="item-price">16.90€</span></div>
        
-	   <h2>Pork</h2> 
-		<div class="item"><span class="item-name">Mille-feuille Pork Tenderloin</span><span class="item-price">17.50€</span></div>
-        <div class="item"><span class="item-name">Pork Tenderloin topped with cheddar sauce</span><span class="item-price">17.50€</span></div>
-        <div class="item"><span class="item-name">Pork Gyros</span><span class="item-price">15.90€</span></div>
-        <div class="item"><span class="item-name">Caramelised Pancetta</span><span class="item-price">18.90€</span></div>
-        <div class="item"><span class="item-name">Pork Spare Ribs</span><span class="item-price">18.90€</span></div>
-        <div class="item"><span class="item-name">Pork Chop Tomahawk 600g</span><span class="item-price">17.90€</span></div>
-        <div class="item"><span class="item-name">Pork Schnitzel</span><span class="item-price">18.50€</span></div>
+	 <h2>Pork</h2> 
+	       <div class="item"><span class="item-name">Mille-feuille Pork Tenderloin</span><span class="item-price">17.50€</span></div>
+               <div class="item"><span class="item-name">Pork Tenderloin topped with cheddar sauce</span><span class="item-price">17.50€</span></div>
+               <div class="item"><span class="item-name">Pork Gyros</span><span class="item-price">15.90€</span></div>
+               <div class="item"><span class="item-name">Caramelised Pancetta</span><span class="item-price">18.90€</span></div>
+               <div class="item"><span class="item-name">Pork Spare Ribs</span><span class="item-price">18.90€</span></div>
+               <div class="item"><span class="item-name">Pork Chop Tomahawk 600g</span><span class="item-price">17.90€</span></div>
+               <div class="item"><span class="item-name">Pork Schnitzel</span><span class="item-price">18.50€</span></div>
        
-	   <h2>Beef</h2> 
-		<div class="item"><span class="item-name">Beef Burger</span><span class="item-price">14.90€</span></div>
-        <div class="item"><span class="item-name">French Style Beef Steak</span><span class="item-price">42.90€</span></div>
-        <div class="item"><span class="item-name">Beef Sirloin</span><span class="item-price">23.90€</span></div>
+	  <h2>Beef</h2> 
+	       <div class="item"><span class="item-name">Beef Burger</span><span class="item-price">14.90€</span></div>
+               <div class="item"><span class="item-name">French Style Beef Steak</span><span class="item-price">42.90€</span></div>
+               <div class="item"><span class="item-name">Beef Sirloin</span><span class="item-price">23.90€</span></div>
 	   
 	   <h2>Lamb</h2>
 		<div class="item"><span class="item-name">Lamb Chops</span><span class="item-price">17.90€</span></div>
        
 	   <h2>Fish</h2>
 		<div class="item"><span class="item-name">Salmon</span><span class="item-price">20.90€</span></div>
-        <div class="item"><span class="item-name">Sea Bass Filet</span><span class="item-price">20.90€</span></div>
-        <div class="item"><span class="item-name">Fish of the Day</span><span class="item-price">21.90€</span></div>
-    </div>
-
-    <!-- Pasta & Risotto -->
-    <div class="category">
-       <h2>Pasta & Risotto</h2>
-       
-	   <h2>Risotto</h2> 
+                <div class="item"><span class="item-name">Sea Bass Filet</span><span class="item-price">20.90€</span></div>
+                <div class="item"><span class="item-name">Fish of the Day</span><span class="item-price">21.90€</span></div>
+            </div>
+    </section>
+	
+    <section class="menu-section">
+       <h2 class="section-title">Pasta & Risotto</h2>
+            <h2>Risotto</h2> 
 		<div class="item"><span class="item-name">Mushroom Risotto</span><span class="item-price">17.50€</span></div>
-        <div class="item"><span class="item-name">Seafood Risotto</span><span class="item-price">18.90€</span></div>
+                <div class="item"><span class="item-name">Seafood Risotto</span><span class="item-price">18.90€</span></div>
        
 	   <h2>Pasta</h2>
-	    <div class="item"><span class="item-name">Napolitana</span><span class="item-price">11.50€</span></div>
-        <div class="item"><span class="item-name">Bolognese</span><span class="item-price">11.90€</span></div>
-        <div class="item"><span class="item-name">Carbonara</span><span class="item-price">13.50€</span></div>
-        <div class="item"><span class="item-name">Mixed Seafood Pasta</span><span class="item-price">19.90€</span></div>
-        <div class="item"><span class="item-name">Skioufihta</span><span class="item-price">15.90€</span></div>
-        <div class="item"><span class="item-name">Pappardelle with Beef</span><span class="item-price">17.90€</span></div>
-        <div class="item"><span class="item-name">Ravioli with Mushrooms</span><span class="item-price">15.50€</span></div>
-    </div>
+	        <div class="item"><span class="item-name">Napolitana</span><span class="item-price">11.50€</span></div>
+                <div class="item"><span class="item-name">Bolognese</span><span class="item-price">11.90€</span></div>
+                <div class="item"><span class="item-name">Carbonara</span><span class="item-price">13.50€</span></div>
+                <div class="item"><span class="item-name">Mixed Seafood Pasta</span><span class="item-price">19.90€</span></div>
+                <div class="item"><span class="item-name">Skioufihta</span><span class="item-price">15.90€</span></div>
+                <div class="item"><span class="item-name">Pappardelle with Beef</span><span class="item-price">17.90€</span></div>
+                <div class="item"><span class="item-name">Ravioli with Mushrooms</span><span class="item-price">15.50€</span></div>
+       </div>
+    </section>
+	
+    <section class="menu-section">
+	 <h2 class="section-title>Traditional Dishes</h2>
+              <div class="item"><span class="item-name">Stuffed pepper and tomato</span><span class="item-price">13.50€</span></div>
+              <div class="item"><span class="item-name">Moussaka</span><span class="item-price">13.90€</span></div>
+              <div class="item"><span class="item-name">Vegetarian Moussaka</span><span class="item-price">13.90€</span></div>
+              <div class="item"><span class="item-name">Stifado Beef</span><span class="item-price">17.50€</span></div>
+              <div class="item"><span class="item-name">Mix Greek Plate</span><span class="item-price">20.90€</span></div>
+              <div class="item"><span class="item-name">Lamb Kleftiko</span><span class="item-price">17.90€</span></div>
+              <div class="item"><span class="item-name">Lamb Shanks</span><span class="item-price">22.50€</span></div>
+              <div class="item"><span class="item-name">Lardos Lamb</span><span class="item-price">17.90€</span></div>
+          </div>
+    </section>
 
-    <!-- Traditional Dishes -->
-    <div class="category">
-      <h2>Traditional Dishes</h2>
-       <div class="item"><span class="item-name">Stuffed pepper and tomato</span><span class="item-price">13.50€</span></div>
-       <div class="item"><span class="item-name">Moussaka</span><span class="item-price">13.90€</span></div>
-       <div class="item"><span class="item-name">Vegetarian Moussaka</span><span class="item-price">13.90€</span></div>
-       <div class="item"><span class="item-name">Stifado Beef</span><span class="item-price">17.50€</span></div>
-       <div class="item"><span class="item-name">Mix Greek Plate</span><span class="item-price">20.90€</span></div>
-       <div class="item"><span class="item-name">Lamb Kleftiko</span><span class="item-price">17.90€</span></div>
-       <div class="item"><span class="item-name">Lamb Shanks</span><span class="item-price">22.50€</span></div>
-       <div class="item"><span class="item-name">Lardos Lamb</span><span class="item-price">17.90€</span></div>
-    </div>
-
-    <!-- Desserts -->
-    <div class="category">
-      <h2>Desserts</h2>
-       <div class="item"><span class="item-name">Cheesecake (strawberry/lemon)</span><span class="item-price">9.50€</span></div>
-       <div class="item"><span class="item-name">Chocolate Lava Cake</span><span class="item-price">9.50€</span></div>
-       <div class="item"><span class="item-name">Portokalopita</span><span class="item-price">9.50€</span></div>
-       <div class="item"><span class="item-name">Apple Pie Tart</span><span class="item-price">9.50€</span></div>
-    </div>
-
+    <section class="menu-section">
+	 <h2 class"section-title>Desserts</h2>
+            <div class="item"><span class="item-name">Cheesecake (strawberry/lemon)</span><span class="item-price">9.50€</span></div>
+            <div class="item"><span class="item-name">Chocolate Lava Cake</span><span class="item-price">9.50€</span></div>
+            <div class="item"><span class="item-name">Portokalopita</span><span class="item-price">9.50€</span></div>
+            <div class="item"><span class="item-name">Apple Pie Tart</span><span class="item-price">9.50€</span></div>
+         </div>
+    </section>
 </body>
 </html>
 
