--- a/templates/menu.html
+++ b/templates/menu.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Valantina's Menu Since 1987</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link hrel="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
