--- a/templates/menu.html
+++ b/templates/menu.html
@@ -5,11 +5,33 @@
     <title>Valantina's Menu Since 1987</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link hrel="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+    <p class="menu-description">
+	    From 1987, Valantina's Restaurant,<br>
+	    has been serving delicious traditional dishes.<br>
+	    We always take care with great devation all of our prime materials.<br>
+	    We use exclusively olive oil that we produce from our land<br>
+	    and we select daily from local markets only the most fresh fish<br>
+	    and meat so that you can enjoy a healthy meal full of flavors.<br>
+	    Our family goal is to offer you tasteful memories.<br>
+
+	    We thank yoy for the trust you show us and we would like<br>
+	    to welcome you to an even more delicious voyage.<br>
+
+	    With great love and respect<br>
+	    Valantina's Family!<br>
+    </p>
+	
 </head>
-<body>
+<body> class="menu-section">
     <header>
-      <h1 class="restaurant-title">Valantina's Restaurant</h1>
-      <p class="subtitle">Since 1987 - Lardos, Greece</p>
+      <section class="menu-block light-green">
+         <h1 class="restaurant-title">Valantina's Restaurant<br><span class="subtitle">Lardos - Rhodes Restaurant Since 1987</span></h1>
+          <p class="menu-description">
+		  Delicious freshly baked aromatic bread,<br> 
+		  prepared with care in our own kitchen.<br>
+		  Hot and crusty, it is a perfect compination<br>
+		  to all of our dishes.
+	  </p>
     </header>
 	
     <section class="menu-section">
@@ -58,6 +80,14 @@
            <div class="item"><span class="item-name">Traditional Greek Salad</span><span class="item-price">9.90€</span></div>
            <div class="item"><span class="item-name">Ceasar's</span><span class="item-price">12.40€</span></div>
          </div>
+	  <p class=<"menu-description">
+		  All of our salads are dressed<br>
+		  with extra virgin<br>
+		  Greek olive oil.<br>
+		  We use Greek olive oil,<br>
+		  to cook, top quality<br>
+		  sunflower oil to fry.<br>
+	  </p>
     </section>
 
     <section class="menu-section">
@@ -106,6 +136,12 @@
                 <div class="item"><span class="item-name">Pappardelle with Beef</span><span class="item-price">17.90€</span></div>
                 <div class="item"><span class="item-name">Ravioli with Mushrooms</span><span class="item-price">15.50€</span></div>
        </div>
+	    <p class=<"menu-description">
+		    If Pasta means love<br>
+		    then Fresh Pasta surely is passion<br>
+		    Prepared daily in our kitchen<br>
+		    with the finest and fresh ingredients.<br>
+	    </p>
     </section>
 	
     <section class="menu-section">
@@ -119,6 +155,12 @@
               <div class="item"><span class="item-name">Lamb Shanks</span><span class="item-price">22.50€</span></div>
               <div class="item"><span class="item-name">Lardos Lamb</span><span class="item-price">17.90€</span></div>
           </div>
+		 <p class=<"menu-description">
+			 The traditional tastes and smells<br>
+			 that one enjoys in the villages<br>
+			 have an important place<br>
+			 in the heart of every Greek.<br>
+		 </p>
     </section>
 
     <section class="menu-section">
