--- a/templates/menu.html
+++ b/templates/menu.html
@@ -5,7 +5,9 @@
     <title>Valantina's Menu Since 1987</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link hrel="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-    <p class="menu-description">
+    <section class="menu-block light-green">
+         <h1 class="restaurant-title">Valantina's Restaurant<br><span class="subtitle">Lardos - Rhodes Restaurant Since 1987</span></h1>
+	<p class="menu-description">
 	    From 1987, Valantina's Restaurant,<br>
 	    has been serving delicious traditional dishes.<br>
 	    We always take care with great devation all of our prime materials.<br>
@@ -22,21 +24,21 @@
     </p>
 	
 </head>
-<body> class="menu-section">
+<body> 
     <header>
-      <section class="menu-block light-green">
-         <h1 class="restaurant-title">Valantina's Restaurant<br><span class="subtitle">Lardos - Rhodes Restaurant Since 1987</span></h1>
+      
           <p class="menu-description">
-		  Delicious freshly baked aromatic bread,<br> 
-		  prepared with care in our own kitchen.<br>
-		  Hot and crusty, it is a perfect compination<br>
-		  to all of our dishes.
+		                                                                                                Delicious freshly baked aromatic bread,<br> 
+		                                                                                                prepared with care in our own kitchen.<br>
+		                                                                                                Hot and crusty, it is a perfect compination<br>
+		                                                                                                to all of our dishes.
 	  </p>
     </header>
 	
     <section class="menu-section">
         <h2 class="section-title">Breads</h2>
-          <div class="item"><span class="item-name">Perikafti</span><span class="item-price">6.00€</span><br><span class=>Country homemade bread with olive oil, oregano and sea salt</span></div>
+          <div class="item"><span class="item-name">Perikafti</span><span class="item-price">6.00€</span><br><span 
+					class=>Country homemade bread with olive oil, oregano and sea salt</span></div>
           <div class="item"><span class="item-name">Garlic bread</span><span class="item-price">3.40€</span></div>
           <div class="item"><span class="item-name">Hot Roll Breads</span><span class="item-price">3.40€</span></div>
         </div> 
@@ -81,12 +83,12 @@
            <div class="item"><span class="item-name">Ceasar's</span><span class="item-price">12.40€</span></div>
          </div>
 	  <p class=<"menu-description">
-		  All of our salads are dressed<br>
-		  with extra virgin<br>
-		  Greek olive oil.<br>
-		  We use Greek olive oil,<br>
-		  to cook, top quality<br>
-		  sunflower oil to fry.<br>
+		                                                                                                    All of our salads are dressed<br>
+		                                                                                                    with extra virgin<br>
+		                                                                                                    Greek olive oil.<br>
+		                                                                                                    We use Greek olive oil,<br>
+		                                                                                                    to cook, top quality<br>
+		                                                                                                    sunflower oil to fry.<br>
 	  </p>
     </section>
 
@@ -137,15 +139,15 @@
                 <div class="item"><span class="item-name">Ravioli with Mushrooms</span><span class="item-price">15.50€</span></div>
        </div>
 	    <p class=<"menu-description">
-		    If Pasta means love<br>
-		    then Fresh Pasta surely is passion<br>
-		    Prepared daily in our kitchen<br>
-		    with the finest and fresh ingredients.<br>
+		                                                                                                    If Pasta means love<br>
+		                                                                                                    then Fresh Pasta surely is passion<br>
+		                                                                                                    Prepared daily in our kitchen<br>
+		                                                                                                    with the finest and fresh ingredients.<br>
 	    </p>
     </section>
 	
     <section class="menu-section">
-	 <h2 class="section-title>Traditional Dishes</h2>
+	 <h2 class="section-title">Traditional Dishes</h2>
               <div class="item"><span class="item-name">Stuffed pepper and tomato</span><span class="item-price">13.50€</span></div>
               <div class="item"><span class="item-name">Moussaka</span><span class="item-price">13.90€</span></div>
               <div class="item"><span class="item-name">Vegetarian Moussaka</span><span class="item-price">13.90€</span></div>
@@ -156,15 +158,15 @@
               <div class="item"><span class="item-name">Lardos Lamb</span><span class="item-price">17.90€</span></div>
           </div>
 		 <p class=<"menu-description">
-			 The traditional tastes and smells<br>
-			 that one enjoys in the villages<br>
-			 have an important place<br>
-			 in the heart of every Greek.<br>
+			                                                                                             The traditional tastes and smells<br>
+			                                                                                             that one enjoys in the villages<br>
+			                                                                                             have an important place<br>
+			                                                                                             in the heart of every Greek.<br>
 		 </p>
     </section>
 
     <section class="menu-section">
-	 <h2 class"section-title>Desserts</h2>
+	 <h2 class"section-title">Desserts</h2>
             <div class="item"><span class="item-name">Cheesecake (strawberry/lemon)</span><span class="item-price">9.50€</span></div>
             <div class="item"><span class="item-name">Chocolate Lava Cake</span><span class="item-price">9.50€</span></div>
             <div class="item"><span class="item-name">Portokalopita</span><span class="item-price">9.50€</span></div>
