--- a/templates/menu.html
+++ b/templates/menu.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link hrel="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
+
 <body class="menu-section">
   
-	<h1>Welcome to Valantina's Restaurant</h1>
-	<p class="intro-text">
+   <h1>Welcome to Valantina's Restaurant</h1>
+	
+   <p class="intro-text">
 	    From 1987, Valantina's Restaurant,<br>
 	    has been serving delicious traditional dishes.<br>
 	    We always take care with great devation all of our prime materials.<br>
@@ -23,11 +25,12 @@
 
 	    <strong>With great love and respect<br>
 	    Valantina's Family!</strong>
-	</p>
+    </p>
 	
-	<section class="menu-block light-green">
-         <h1 class="restaurant-title">Valantina's Restaurant<br><span class="subtitle">Lardos - Rhodes Restaurant Since 1987</span></h1>
-</head>
+    <section class="menu-block light-green">
+      <h1 class="restaurant-title">Valantina's Restaurant<br><span class="subtitle">Lardos - Rhodes Restaurant Since 1987</span></h1>
+    </section>
+	
 <body> 
     <header>
       
