--- a/static/style.css
+++ b/static/style.css
@@ -97,7 +97,7 @@ nav a:hover {
     text-align: left;
     font-size: 18px;
     font-weight: 500;
-    font-family; 'Georgia', serif;
+    font-family: 'Georgia', serif;
 }
     
 .item-price {
